--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
+	<meta name="facebook-domain-verification" content="thbr8edf8a56881kpk5k6mcirrs5vn" />
 	<script>
     (function() {
     var name = '_zW5xV2s6C2pmbrsM';
